@@ -137,4 +137,18 @@
     key="t"
 [/hotkey]
 
+[hotkey]
+    command="editor-update-transitions"
+    key="t"
+[/hotkey]
+
+[hotkey]
+    command="editor-draw-coordinates"
+    key="o"
+[/hotkey]
+
+[hotkey]
+    command="editor-draw-terrain-codes"
+    key="i"
+[/hotkey]
 #undef IF_APPLE_CMD_ELSE_CTRL
