@@ -5,6 +5,8 @@ Version 1.5.4+svn:
      (hardcoded) list of time_of_days. Can change the settings and see the
      effects without having to close the settings dialog. The preferences
      are shared with the old editor.
+   * Added a feature to draw hex coordinates and/or terrain code on every hex
+   * Auto update transitions option is stored in the preferences
  * Graphics:
    * New or updated unit frames: Walking Corpse swimmer, Soulless swimmer
  * Language and i18n:
